--- a/index.html
+++ b/index.html
@@ -610,6 +610,7 @@
     </style>
     
     <script src="script.js" defer></script>
+    <script src="auto-coder-ai.js" defer></script>
     <script>
         // Script de depuración para verificar la autenticación
         document.addEventListener('DOMContentLoaded', () => {
@@ -709,9 +710,26 @@
                 <span id="statusIndicator">🔄</span>
                 <span id="statusText">Verificando conexión...</span>
             </div>
-            <button id="logoutBtn" title="Cerrar Sesión">
-                <span class="material-symbols-outlined">logout</span>
-            </button>
+            <div style="display: flex; gap: 10px; align-items: center;">
+                <button id="autoCoderBtn" title="🤖 Activar Auto-Coder AI" style="
+                    background: linear-gradient(135deg, #4CAF50, #45a049);
+                    color: white;
+                    border: none;
+                    padding: 12px;
+                    border-radius: 50%;
+                    cursor: pointer;
+                    transition: all 0.3s ease;
+                    width: 48px;
+                    height: 48px;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    font-size: 20px;
+                ">🤖</button>
+                <button id="logoutBtn" title="Cerrar Sesión">
+                    <span class="material-symbols-outlined">logout</span>
+                </button>
+            </div>
         </header>
         
         <!-- CONTENIDO PRINCIPAL -->
